@startuml
skinparam linetype ortho
skinparam classAttributeIconSize 0
skinparam shadowing true
skinparam packageStyle rectangle

' === 1. ПАКЕТ ЯДРА И МОДЕЛИ (КОНТЕКСТ) ===
package "Model and Core" {
    class Game << (M,#C7E9B0) Model >> {
        - Board board
        - Player player
        - int currentLevel
        + executeCommand(cmd) : bool
        + updateWorld()
        + isGameRunning() : bool
        + getPlayer() : const Player&
    }
    
    interface IObservable << (I, #FFCC00) Observable >> {
        + notify(msg)
        + addObserver(o)
    }

    class Game
}

' === 2. ПАКЕТ КОМАНД И КОНТРОЛЛЕРА ===
package "Controller and Input" {
    class Command << (D, #7F7F7F) Data >> {
        + type : CommandType
        + dir : Direction
        + target : pair<int, int>
    }

    class InputHandler << (C, #DAAA00) Strategy >> {
        - keyMap : map<char, CommandType>
        + InputHandler(config: string)
        + getCommand(player: Player&) : Command
        + loadConfig(filename)
        + setDefaultControls()
    }

    class GameManager << (T, #3388BB) Template Manager >> {
        - InputT input  // Compostition (Requirement: Creates object)
        - VisualizerT& visualizer
        + GameManager(Game&, VisualizerT&)
        + run()
    }
}

' === 3. ПАКЕТ ВЫВОДА И ЛОГИРОВАНИЯ ===
package "View and Logging" {
    interface IGameObserver << (I, #FF7700) Observer >> {
        + {abstract} onGameEvent(msg)
    }

    class FileLogger {
        - ofstream file
        + onGameEvent(msg)
    }

    class ConsoleRenderer << (V, #99CCFF) Drawer Strategy >> {
        - vector<string> messageBuffer
        + renderBoard(Board, Player...)
        + addMessage(msg)
    }

    class GameVisualizer <RenderT> {
        - RenderT renderer // Compostition (Requirement: Creates object)
        + GameVisualizer()
        + onGameEvent(msg)
        + render(Game&)
    }
}

' === 4. СВЯЗИ ===

' Controller -> Model/Visualizer
GameManager --> Game
GameManager --> GameVisualizer

' View/Observer Linkage
IObservable <|-- Game
IGameObserver <|.. FileLogger
IGameObserver <|.. GameVisualizer

' Visualizer Composition (Policy Injection)
GameVisualizer *-- RenderT

' Input Composition (Policy Injection)
GameManager *-- InputHandler

' Data flow
InputHandler ..> Command

@enduml